<resources>
    <string name="app_name">Ezeety</string>
    <string name="ezeetyApp">ezeety</string>
    <string name="connexionText">Connexion</string>
    <string name="se_conncter_sur_facebookText">   Se connecter avec Facebook</string>
    <string name="se_conncter_sur_google">Se connecter avec Google</string>
    <string name="mot_de_passe_oublier">Mot de passe oublier?</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte?</string>
    <string name="inscrivez_vous">Inscrivez-vous.</string>
    <string name="ou">OU</string>
    <string name="que_recherchez_vous_string">Que recherchez-vous</string>
    <string name="baseUrl">http://192.162.69.209:3001/api/</string>
    <string name="msgResponseSuccessful">login successful</string>
    <string name="errorEmailorPswd">email ou mot de passe incorrect</string>
    <string name="errorLoadTry">Erreur durant le Chargement, veuillez Ressayer</string>
    <string name="errorNetwork">Erreur de connexion Internet</string>
    <string name="mailRequired">Entrez votre adresse e-mail</string>
    <string name="passwordRequired">Entrez votre mot de passe</string>
    <string name="restaurant_et_cuisine_du_monde">Restaurant et cuisine du monde</string>
    <string name="recherche_home_text">Recherche</string>
    <string name="recommandations_home_text">Recommandations</string>
    <string name="ambassadeurs_home_text">Ambassadeurs</string>
    <string name="parcours_home_text">Parcours</string>
    <string name="imageviewgrid_tex">imageViewGrid</string>
    <string name="imageviewlist_text">imageViewList</string>
    <string name="imageviewlogo_description">imageViewLogo</string>
    <string name="e_mail_ou_nom_d_utilisateur_text_hin">E-mail ou nom d\'utilisateur</string>
    <string name="title_activity_ezeety_tab_gallery">ezeety_tab_gallery</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_ezeety_tabbed_galleri">ezeety_tabbed_galleri</string>
    <string name="title_tab_gallerie">GALLERIE</string>
    <string name="title_tab_photo">PHOTO</string>
    <string name="facebook_app_id">2292877137401361</string>
    <string name="fb_login_protocol_scheme">fb2292877137401361</string>

    <string name="appbar_scrolling_view_behavior" />

</resources>
