<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ezeety_home">

    <EditText
        android:id="@+id/editTextSearchHome"
        android:layout_width="347dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/ezeety_home_search_style"
        android:drawableStart="@mipmap/search_35px"
        android:ems="10"
        android:hint="@string/recherche_home_text"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="393dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchHome">

        <TextView
            android:id="@+id/textViewButtonRecom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ezeety_edittext_style"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/recommandations_home_text"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textViewButtonAmbassad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ezeety_edittext_style"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/ambassadeurs_home_text"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textViewButtonParcr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ezeety_edittext_style"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/parcours_home_text"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="13sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="574dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/que_recherchez_vous_string"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                app:fontFamily="@font/roboto_bold"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="137dp" />

            <HorizontalScrollView
                android:id="@+id/scrollViewTypeLieu"
                android:layout_width="382dp"
                android:layout_height="157dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="183dp">

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/listGridStyle"
                    android:layout_width="196dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/imageviewgrid_tex"
                    app:srcCompat="@mipmap/grid_02_35px_1" />

                <ImageView
                    android:id="@+id/listlisStyle"
                    android:layout_width="196dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/imageviewlist_text"
                    app:srcCompat="@mipmap/list_35px" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/restaurant_et_cuisine_du_monde"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                app:fontFamily="@font/roboto_bold"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="137dp" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>