<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ezeety_home"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/imageviewlogo_description"
            android:src="@drawable/logo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

        </LinearLayout>
        <EditText
            android:id="@+id/editTextEmail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ezeety_edittext_style"
            android:ems="10"
            android:freezesText="true"
            android:hint="@string/e_mail_ou_nom_d_utilisateur_text_hin"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12dp"/>
        <EditText
            android:id="@+id/editTextPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ezeety_edittext_style"
            android:ems="10"
            android:freezesText="true"
            android:hint="Mot de passe"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </LinearLayout>
        <Button
            android:id="@+id/buttonConnexion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_style_primary"
            android:text="@string/connexionText"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textViewMotdepaaseOublier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/mot_de_passe_oublier"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="OU"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/buttonConnexionFacebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_style_facebook"
            android:drawableLeft="@mipmap/facebook_48px"
            android:paddingLeft="50dp"
            android:paddingRight="40dp"
            android:text="@string/se_conncter_sur_facebookText"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/buttonConnexionGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_style_google"
            android:drawableLeft="@mipmap/google_plus_40px_1"
            android:paddingLeft="50dp"
            android:paddingRight="40dp"
            android:text="@string/se_conncter_sur_google"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMotdepaaseOublier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/vous_n_avez_pas_de_compte"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/textViewInscrire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/inscrivez_vous"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>